# wiz3d

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  beam.nim  build.bat  build.command  build.sh  compress.bat  compsystem.nim  entity.nim  math3d.nim  prefab.nim  renderer.nim  run.bat  run.command  run.sh  todo.txt  world.nim
_build/data/: angel.lua  billboards.lua  collisions.lua  fog.lua  helloworld.lua  hoverbike.lua  md2.lua  primitives.lua  rotatingcube.lua  specular.lua
comp/: camera.nim  component.nim  transform.nim
doc/: documentation.md
examples/: 1-helloworld.c  10-specular.c  11-md2.c  12-angel.c  13-hoverbike.c  2-primitives.c  3-texture2d.c  4-triangle.c  5-lightmap.c  5-rotatingcube.c  6-billboards.c  7-lighting.c  8-fog.c  9-collisions.c  angel.c  billboards.c  collisions.c  fog.c  helloworld.c  hoverbike.c  md2.c  primitives.c  rotatingcube.c  specular.c
examples/data/: german.md2  hoverbike.assbin  sphere.assbin
lib/: lib_versions.txt  stretchy_buffer.h  tinyobj_loader_c.h
lib/base64/: README.txt
lib/litelibs/: README.md  liteassbin.h  liteb3d.h  litecol.h  litegfx.h  litemath3d.h  litemd2.h  litemem.h  litestring.h  liteunit.h  litewav.h
lib/ode/: Makefile.in
lib/sdl2/: SDL_config.h  SDL_config_win32.h
lib/sdl2_/: SDL_config_linux.h  SDL_config_macos.h  SDL_config_win32.h
lib/tinyfiledialogs/: tinyfiledialogs.c
src/: audio.c  audio.h  beam.c  beam.h  beam_config.h  colbox.c  colbox.h  color.c  color.h  default_font.h  dirent.h  draw.c  draw.h  file_system.c  file_system.h  font.c  font.h  input.c  input.h  input_allegro.h  input_glfw.h  input_sdl.h  light.c  light.h  log.c  log.h  main.c  material.c  material.h  material_internal.h  memblock.c  memblock.h  memory.c  memory.h  mesh.c  mesh.h  micron.c  micron.h  micron_config.h  object.c  (+33 more)
stuff/: assimp_params.txt  colbox.i  color.i  common.i  gen_defaultfont.cc  gen_inputcodes.cc  input.i  inputcodes.txt  inputcodes_out.txt  light.i  log.i  material.i  memory.i  object.i  pak_editor.bmx  pixmap.i  screen.i  sound.i  texture.i  viewer.i
